# netsim-embed

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: addr.rs  lib.rs  packet.rs  range.rs
examples/: broadcast.rs  broadcast_client.rs  broadcast_server.rs  detect_support.rs  if_watch.rs  if_watch_runner.rs  iperf.rs  iperf_client.rs  iperf_server.rs  netcat.rs  netcat_host.rs  p2p.rs  p2p.rs.old  ping_pong.rs  ping_pong_tcp.rs  ping_pong_udp.rs  ping_pong_udp_gso.rs  smol.rs  tcp_client.rs  tcp_server.rs  tokio.rs  udp_client.rs  udp_gso_client.rs  udp_gso_server.rs  udp_server.rs  wait_for_exit.rs
examples_old/: ping_pong_tcp.rs  ping_pong_udp_gso.rs
machine/: Cargo.toml
machine/examples/: smol.rs  tokio.rs
machine/src/: iface.rs  lib.rs  main.rs  namespace.rs  tokio.rs
macros/: Cargo.toml
macros/src/: lib.rs
nat/: Cargo.toml
nat/src/: builder.rs  lib.rs  nat.rs  packet.rs  port_allocator.rs  port_map.rs
router/: Cargo.toml
router/src/: lib.rs
src/: iface.rs  lib.rs  main.rs
tests/: smoke_test.rs
