[workspace]
members = ["cli", "core", "machine", "nat", "router", "."]

[package]
name = "netsim-embed"
version = "0.5.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Network simulator."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
async-global-executor = "2.0.2"
async-process = "1.0.2"
futures = "0.3.13"
libpacket = "0.1.0"
log = "0.4.14"
netsim-embed-core = { version = "0.4.1", path = "core" }
netsim-embed-machine = { version = "0.4.0", path = "machine" }
netsim-embed-nat = { version = "0.4.0", path = "nat" }
netsim-embed-router = { version = "0.4.1", path = "router" }

[dev-dependencies]
anyhow = "1.0.40"
async-io = "1.3.1"
async-process = "1.0.2"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
env_logger = "0.8.3"
if-watch = "0.2.2"
ipnet = "2.3.0"
netsim-embed-cli = { path = "cli" }
udp-socket = "0.1.1"
