[workspace]
members = ["cli", "core", "machine", "nat", "router", "."]

[package]
name = "netsim-embed"
version = "0.7.2"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Network simulator."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[features]
ipc = ["dep:libtest-mimic", "dep:anyhow", "dep:ipc-channel"]

[dependencies]
anyhow = { version = "1.0.40", optional = true }
async-global-executor = "2.0.2"
async-process = "1.0.2"
dlopen = "0.1.8"
futures = "0.3.13"
ipc-channel = { version = "0.16.0", optional = true }
libpacket = "0.1.0"
libtest-mimic = { version = "0.6.0", optional = true }
log = "0.4.14"
netsim-embed-core = { version = "0.4.2", path = "core" }
netsim-embed-machine = { version = "0.6.3", path = "machine" }
netsim-embed-nat = { version = "0.4.1", path = "nat" }
netsim-embed-router = { version = "0.4.5", path = "router" }

[dev-dependencies]
anyhow = "1.0.40"
async-io = "1.3.1"
async-process = "1.0.2"
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
env_logger = "0.8.3"
if-watch = "0.2.2"
ipnet = "2.3.0"
netsim-embed-cli = { path = "cli" }
udp-socket = "0.1.1"

[[test]]
name = "smoke_test"
path = "tests/smoke_test.rs"
harness = false
required-features = ["ipc"]
