[workspace]
members = ["cli", "core", "machine", "macros", "nat", "router", "."]

[package]
name = "netsim-embed"
version = "0.9.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Network simulator."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[features]
ipc = [
    "dep:libtest-mimic",
    "dep:anyhow",
    "dep:ipc-channel",
    "dep:netsim-embed-macros",
    "dep:serde",
]

[dependencies]
anyhow = { version = "1.0.70", optional = true }
async-global-executor = "2.3.1"
async-process = "1.6.0"
futures = "0.3.27"
ipc-channel = { version = "0.18.0", optional = true }
libpacket = "0.1.2"
libtest-mimic = { version = "0.6.0", optional = true }
log = "0.4.17"
netsim-embed-core = { version = "0.4.3", path = "core" }
netsim-embed-machine = { version = "0.6.4", path = "machine" }
netsim-embed-macros = { version = "0.2.0", path = "macros", optional = true }
netsim-embed-nat = { version = "0.4.2", path = "nat" }
netsim-embed-router = { version = "0.4.6", path = "router" }
serde = { version = "1.0.158", optional = true }

[dev-dependencies]
anyhow = "1.0.70"
async-io = "1.13.0"
async-process = "1.6.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.67"
env_logger = "0.10.0"
if-watch = { version = "0.2.2" }
ipnet = "2.7.1"
netsim-embed-cli = { path = "cli" }
udp-socket = "0.1.5"

[[test]]
name = "smoke_test"
path = "tests/smoke_test.rs"
harness = false
required-features = ["ipc"]
