[package]
name = "netsim-embed-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.40"
async-process = "1.1.0"
async-std = "1.12.0"
async-trait = "0.1.50"
env_logger = "0.8.3"
log = "0.4.14"
netsim-embed = { path = ".." }
structopt = "0.3.21"
