[package]
name = "netsim-embed-cli"
version = "0.1.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.70"
async-process = "1.6.0"
async-std = "1.12.0"
async-trait = "0.1.67"
env_logger = "0.10.0"
log = "0.4.17"
netsim-embed = { path = ".." }
structopt = "0.3.26"
