[package]
name = "netsim-embed-core"
version = "0.2.2"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Core types for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
async-global-executor = "2.0.2"
async-io = "1.3.1"
futures = "0.3.13"
pnet_packet = "0.27.2"
rand = "0.8.3"
thiserror = "1.0.24"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
