[package]
name = "netsim-embed-machine"
version = "0.2.2"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Runs a future in a separate network namespace with a TUN adapter."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
async-global-executor = "2.0.2"
async-io = "1.3.1"
async-process = "1.1.0"
futures = "0.3.13"
ioctl-sys = "0.7.1"
libc = "0.2.90"
log = "0.4.14"
netsim-embed-core = { version = "0.2.0", path = "../core" }
tracing = "0.1.25"
