[package]
name = "netsim-embed-machine"
version = "0.6.4"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Runs a future in a separate network namespace with a TUN adapter."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
async-global-executor = "2.3.1"
async-io = "1.13.0"
async-process = "1.6.0"
async-std = "1.12.0"
futures = "0.3.27"
ioctl-sys = "0.8.0"
libc = "0.2.140"
log = "0.4.17"
netsim-embed-core = { version = "0.4.3", path = "../core" }
