[package]
name = "netsim-embed-nat"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of a nat for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
futures = "0.3.12"
log = "0.4.13"
netsim-embed-core = { version = "0.1.0", path = "../core" }
pnet_packet = "0.27.2"
rand = "0.8.2"
