[package]
name = "netsim-embed-nat"
version = "0.4.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of a nat for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
futures = "0.3.13"
log = "0.4.14"
netsim-embed-core = { version = "0.4.0", path = "../core" }
rand = "0.8.3"
