[package]
name = "netsim-embed-router"
version = "0.2.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of a router for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
futures = "0.3.13"
log = "0.4.14"
netsim-embed-core = { version = "0.2.0", path = "../core" }
pnet_packet = "0.27.2"
