[package]
name = "netsim-embed-router"
version = "0.2.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of a router for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
futures = "0.3.13"
libpacket = "0.1.0"
log = "0.4.14"
netsim-embed-core = { version = "0.2.0", path = "../core" }
