[package]
name = "netsim-embed-router"
version = "0.4.7"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of a router for netsim embed."
license = "MIT"
repository = "https://github.com/ipfs-rust/netsim-embed"

[dependencies]
async-global-executor = "2.3.1"
futures = "0.3.27"
libpacket = "0.1.2"
log = "0.4.17"
netsim-embed-core = { version = "0.4.3", path = "../core" }
